--- a/panchayat.html
+++ b/panchayat.html
@@ -1846,7 +1846,7 @@
               
               <div>
 
-             <button class="btn btn-primary" onclick="window.location.href='https://vidhidepre.com/embed/q80elj6tuap7';">
+             <button class="btn btn-primary" onclick="window.location.href='https://new2.filepress.ink/file/665503d5e6449f51658680db';">
             <ion-icon name="play"></ion-icon>
             <span>Watch Now Episode-1 Free</span>
           </button>
